--- a/admin-service-dev.properties
+++ b/admin-service-dev.properties
@@ -1,8 +1,8 @@
 
-service.name=customer-service
+service.name=admin-service
 server.port=8099
 
-spring.data.mongodb.database=customer-service-db
+spring.data.mongodb.database=admin-service-db
 
 logging.level.org.springframework=info
 
