--- a/inventory-service-dev.properties
+++ b/inventory-service-dev.properties
@@ -1,8 +1,8 @@
 
-service.name=customer-service
-server.port=8099
+service.name=inventory-service
+server.port=8095
 
-spring.data.mongodb.database=jn26-customer-db
+spring.data.mongodb.database=inventory-service-db
 
 logging.level.org.springframework=info
 
@@ -40,7 +40,7 @@ spring.kafka.producer.bootstrap-servers= localhost:9092
 spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
 
-        
+
 zipkin.baseUrl: http://localhost:9411
 
 management.endpoints.web.exposure.include= health, metrics, prometheus
