--- a/booking-service-dev.properties
+++ b/booking-service-dev.properties
@@ -1,8 +1,8 @@
 
-service.name=notification-service
-server.port=8095
+service.name=booking-service
+server.port=8094
 
-spring.data.mongodb.database=notification-service-db
+spring.data.mongodb.database=booking-service-db
 
 logging.level.org.springframework=info
 
