added for all event

--- a/inventory-service-dev.properties
+++ b/inventory-service-dev.properties
@@ -37,7 +37,7 @@ spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.St
 spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
 #Disable type header usage + set default type
 spring.kafka.consumer.properties.spring.json.use.type.headers=false
-spring.kafka.consumer.properties.spring.json.value.default.type=com.egov.inventoryservice.event.BusRouteCreatedEvent
+spring.kafka.consumer.properties.spring.json.value.default.type=com.egov.inventoryservice.event.*
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 spring.kafka.producer.bootstrap-servers= localhost:9092
