--- a/payment-service-dev.properties
+++ b/payment-service-dev.properties
@@ -36,8 +36,8 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
 #Disable type header usage + set default type
-spring.kafka.consumer.properties.spring.json.use.type.headers=false
-spring.kafka.consumer.properties.spring.json.value.default.type=com.egov.paymentservice.event
+spring.kafka.consumer.properties.spring.json.use.type.headers=true
+#spring.kafka.consumer.properties.spring.json.value.default.type=com.egov.paymentservice.event
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 spring.kafka.producer.bootstrap-servers= localhost:9092
