--- a/booking-service-dev.properties
+++ b/booking-service-dev.properties
@@ -35,13 +35,14 @@ spring.kafka.consumer.group-id= 1
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
-
+spring.kafka.consumer.properties.spring.json.use.type.headers=true
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 spring.kafka.producer.bootstrap-servers= localhost:9092
 spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
 #must disable adding type headers.
-spring.kafka.producer.properties.spring.json.add.type.headers=true
+#spring.kafka.producer.properties.spring.json.add.type.headers=true
 
 zipkin.baseUrl: http://localhost:9411
 
