--- a/booking-service-dev.properties
+++ b/booking-service-dev.properties
@@ -35,7 +35,12 @@ spring.kafka.consumer.group-id= 1
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
+#Disable type header usage + set default type
 spring.kafka.consumer.properties.spring.json.use.type.headers=false
+#spring.kafka.consumer.properties.spring.json.value.default.type=com.egov.inventoryservice.event
+spring.kafka.consumer.properties.spring.json.type.mapping=\
+bookingFailed:com.egov.bookingservice.event.BookingFailedEvent,\
+bookingConfirmed:com.egov.bookingservice.event.BookingConfirmedEvent
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 spring.kafka.producer.bootstrap-servers= localhost:9092
