--- a/booking-service-dev.properties
+++ b/booking-service-dev.properties
@@ -41,7 +41,7 @@ spring.kafka.consumer.properties.spring.json.use.type.headers=true
 #spring.kafka.consumer.properties.spring.json.type.mapping=\
 #bookingFailed:com.egov.bookingservice.event.BookingFailedEvent,\
 #bookingConfirmed:com.egov.bookingservice.event.BookingConfirmedEvent
-#spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 spring.kafka.producer.bootstrap-servers= localhost:9092
 spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
