--- a/booking-service-dev.properties
+++ b/booking-service-dev.properties
@@ -36,12 +36,12 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
 #Disable type header usage + set default type
-spring.kafka.consumer.properties.spring.json.use.type.headers=true
+#spring.kafka.consumer.properties.spring.json.use.type.headers=true
 #spring.kafka.consumer.properties.spring.json.value.default.type=com.egov.inventoryservice.event
 #spring.kafka.consumer.properties.spring.json.type.mapping=\
 #bookingFailed:com.egov.bookingservice.event.BookingFailedEvent,\
 #bookingConfirmed:com.egov.bookingservice.event.BookingConfirmedEvent
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
+#spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 spring.kafka.producer.bootstrap-servers= localhost:9092
 spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
