--- a/booking-service-dev.properties
+++ b/booking-service-dev.properties
@@ -36,18 +36,18 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
 #Disable type header usage + set default type
-#spring.kafka.consumer.properties.spring.json.use.type.headers=true
+spring.kafka.consumer.properties.spring.json.use.type.headers=true
 #spring.kafka.consumer.properties.spring.json.value.default.type=com.egov.inventoryservice.event
 #spring.kafka.consumer.properties.spring.json.type.mapping=\
 #bookingFailed:com.egov.bookingservice.event.BookingFailedEvent,\
 #bookingConfirmed:com.egov.bookingservice.event.BookingConfirmedEvent
-#spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.trusted-packages=com.egov.bookingservice.event,com.egov.paymentservice.event
 
 spring.kafka.producer.bootstrap-servers= localhost:9092
 spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
 #must disable adding type headers.
-#spring.kafka.producer.properties.spring.json.add.type.headers=false
+spring.kafka.producer.properties.spring.json.add.type.headers=true
 
 zipkin.baseUrl: http://localhost:9411
 
