--- a/booking-service-dev.properties
+++ b/booking-service-dev.properties
@@ -41,13 +41,13 @@ spring.kafka.consumer.properties.spring.json.use.type.headers=true
 #spring.kafka.consumer.properties.spring.json.type.mapping=\
 #bookingFailed:com.egov.bookingservice.event.BookingFailedEvent,\
 #bookingConfirmed:com.egov.bookingservice.event.BookingConfirmedEvent
-spring.kafka.consumer.properties.spring.json.trusted-packages=com.egov.bookingservice.event,com.egov.paymentservice.event
+spring.kafka.consumer.properties.spring.json.trusted-packages=*
 
 spring.kafka.producer.bootstrap-servers= localhost:9092
 spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
 #must disable adding type headers.
-spring.kafka.producer.properties.spring.json.add.type.headers=true
+#spring.kafka.producer.properties.spring.json.add.type.headers=true
 
 zipkin.baseUrl: http://localhost:9411
 
