--- a/booking-service-prod.properties
+++ b/booking-service-prod.properties
@@ -1,9 +1,10 @@
-service.name= finance-service
-server.port=8091
 
-#spring.data.mongodb.database=ciw-auth-db
+service.name=booking-service
+server.port=8094
 
-logging.level.org.springframework=debug
+spring.data.mongodb.database=booking-service-db
+
+logging.level.org.springframework=info
 
 # For a local Redis instance
 spring.data.redis.host=localhost
@@ -15,7 +16,7 @@ auth-service.portnumber=8091
 
 # All traces should be sent to latency analysis tool
 management.tracing.sampling.probability=1.0
-management.otlp.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.otlp.tracing.endpoint=http://zipkin-server:9411/api/v2/spans
 management.endpoints.web.exposure.include=prometheus
 
 # For Exemplars to work we need histogram buckets
@@ -27,20 +28,26 @@ logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-
 eureka.instance.preferIpAddress= true
 eureka.client.registerWithEureka= true
 eureka.client.fetchRegistry= true
-eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone= http://eureka-server:8761/eureka
 
-spring.kafka.consumer.bootstrap-servers= localhost:9092
+spring.kafka.consumer.bootstrap-servers= kafka:9092
 spring.kafka.consumer.group-id= 1
-spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.auto-offset-reset=latest
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
+#Disable type header usage + set default type
+spring.kafka.consumer.properties.spring.json.use.type.headers=true
+#spring.kafka.consumer.properties.spring.json.value.default.type=com.egov.inventoryservice.event
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
-spring.kafka.producer.bootstrap-servers= localhost:9092
+spring.kafka.producer.bootstrap-servers= kafka:9092
 spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
+#must disable adding type headers.
+#spring.kafka.producer.properties.spring.json.add.type.headers=true
 
-        
-zipkin.baseUrl: http://localhost:9411
+
+zipkin.baseUrl: http://zipkin-server:9411
 
 management.endpoints.web.exposure.include= health, metrics, prometheus
 management.metrics.tags.application=${spring.application.name}
