--- a/admin-service-prod.properties
+++ b/admin-service-prod.properties
@@ -1,8 +1,8 @@
 
-service.name=payment-service
-server.port=8096
+service.name=admin-service
+server.port=8099
 
-spring.data.mongodb.database=payment-service-db
+spring.data.mongodb.database=admin-service-db
 
 logging.level.org.springframework=info
 
@@ -32,17 +32,15 @@ eureka.client.serviceUrl.defaultZone= http://eureka-server:8761/eureka
 
 spring.kafka.consumer.bootstrap-servers= kafka:9092
 spring.kafka.consumer.group-id= 1
-spring.kafka.consumer.auto-offset-reset=latest
+spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
-#Disable type header usage + set default type
-spring.kafka.consumer.properties.spring.json.use.type.headers=true
-#spring.kafka.consumer.properties.spring.json.value.default.type=com.egov.paymentservice.event
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 spring.kafka.producer.bootstrap-servers= kafka:9092
 spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
+#must disable adding type headers.
+spring.kafka.producer.properties.spring.json.add.type.headers=true
 
 
 zipkin.baseUrl: http://zipkin-server:9411
