--- a/auth-service-prod.properties
+++ b/auth-service-prod.properties
@@ -1,41 +1,46 @@
 service.name= auth-service
+server.port=8098
+
+spring.data.mongodb.database=auth-service-db
+
+logging.level.org.springframework=info
+
+# For a local Redis instance
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+auth-service.hostname=localhost
+auth-service.portnumber=8091
 
 
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.jpa.show-sql = true
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.database.driverClassName= org.postgresql.Driver
-spring.datasource.username= postgres
-spring.datasource.password= Dedsec_7
-spring.datasource.url= jdbc:postgresql://cbt.crkd2ofk8zyf.ap-south-1.rds.amazonaws.com:5432/cbt
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
+# All traces should be sent to latency analysis tool
+management.tracing.sampling.probability=1.0
+management.otlp.tracing.endpoint=http://zipkin-server:9411/api/v2/spans
+management.endpoints.web.exposure.include=prometheus
 
-spring.kafka.consumer.bootstrap-servers= kafka:9092
-spring.kafka.consumer.group-id= group-id
-spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer= org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.producer.bootstrap-servers= kafka:9092
-spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
+# For Exemplars to work we need histogram buckets
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
 
-auth-service.hostname=auth-service
-
-auth-service.hostname=auth-service
-auth-service.portnumber=80
+# traceID and spanId are predefined MDC keys - we want the logs to include them
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 
 eureka.instance.preferIpAddress= true
 eureka.client.registerWithEureka= true
 eureka.client.fetchRegistry= true
 eureka.client.serviceUrl.defaultZone= http://eureka-server:8761/eureka
 
-spring.zipkin.base-url= http://zipkin-server:9411
+spring.kafka.consumer.bootstrap-servers= kafka:9092
+spring.kafka.consumer.group-id= 1
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer= org.apache.kafka.common.serialization.StringDeserializer
 
-        
-zipkin.baseUrl: http://zipkin:9411
+spring.kafka.producer.bootstrap-servers= kafka:9092
+spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
+
+
+zipkin.baseUrl: http://zipkin-server:9411
+
 management.endpoints.web.exposure.include= health, metrics, prometheus
 management.metrics.tags.application=${spring.application.name}
