--- a/inventory-service-prod.properties
+++ b/inventory-service-prod.properties
@@ -1,37 +1,51 @@
-service.name= health-service
 
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.jpa.show-sql = true
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.database.driverClassName= org.postgresql.Driver
-spring.datasource.username= indiagator
-spring.datasource.password= Dedsec@7
-spring.datasource.url= jdbc:postgresql://localhost:5432/egov
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
+service.name=inventory-service
+server.port=8095
+
+spring.data.mongodb.database=inventory-service-db
+
+logging.level.org.springframework=info
+
+# For a local Redis instance
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+auth-service.hostname=localhost
+auth-service.portnumber=8091
+
+
+# All traces should be sent to latency analysis tool
+management.tracing.sampling.probability=1.0
+management.otlp.tracing.endpoint=http://zipkin-server:9411/api/v2/spans
+management.endpoints.web.exposure.include=prometheus
+
+# For Exemplars to work we need histogram buckets
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+
+# traceID and spanId are predefined MDC keys - we want the logs to include them
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 
 eureka.instance.preferIpAddress= true
 eureka.client.registerWithEureka= true
 eureka.client.fetchRegistry= true
-eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone= http://eureka-server:8761/eureka
 
-gateway-server.hostname=localhost
-        
-spring.kafka.consumer.bootstrap-servers= localhost:9092
-spring.kafka.consumer.group-id= health-consumer
-spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.bootstrap-servers= kafka:9092
+spring.kafka.consumer.group-id= 1
+spring.kafka.consumer.auto-offset-reset=latest
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
+#Disable type header usage + set default type
+spring.kafka.consumer.properties.spring.json.use.type.headers=true
+#spring.kafka.consumer.properties.spring.json.value.default.type=com.egov.inventoryservice.event
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
-spring.kafka.producer.bootstrap-servers= localhost:9092
+spring.kafka.producer.bootstrap-servers= kafka:9092
 spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
 
-        
-zipkin.baseUrl: http://localhost:9411
+
+zipkin.baseUrl: http://zipkin-server:9411
 
 management.endpoints.web.exposure.include= health, metrics, prometheus
 management.metrics.tags.application=${spring.application.name}
