configure inventory and admin url

--- a/booking-service-dev.properties
+++ b/booking-service-dev.properties
@@ -6,6 +6,10 @@ spring.data.mongodb.database=booking-service-db
 
 logging.level.org.springframework=info
 
+inventory.service.url=http://localhost:8095
+
+admin.service.url=http://localhost:8099/admin
+
 # For a local Redis instance
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
