--- a/booking-service-prod.properties
+++ b/booking-service-prod.properties
@@ -20,7 +20,7 @@ auth-service.portnumber=8091
 
 # All traces should be sent to latency analysis tool
 management.tracing.sampling.probability=1.0
-management.otlp.tracing.endpoint=http://zipkin-server:9411/api/v2/spans
+management.otlp.tracing.endpoint=http://zipkin:9411/api/v2/spans
 management.endpoints.web.exposure.include=prometheus
 
 # For Exemplars to work we need histogram buckets
@@ -32,7 +32,7 @@ logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-
 eureka.instance.preferIpAddress= true
 eureka.client.registerWithEureka= true
 eureka.client.fetchRegistry= true
-eureka.client.serviceUrl.defaultZone= http://eureka-server:8761/eureka
+eureka.client.serviceUrl.defaultZone= http://eurekaserver:8761/eureka
 
 spring.kafka.consumer.bootstrap-servers= kafka:9092
 spring.kafka.consumer.group-id= 1
@@ -51,7 +51,7 @@ spring.kafka.producer.value-serializer= org.springframework.kafka.support.serial
 #spring.kafka.producer.properties.spring.json.add.type.headers=true
 
 
-zipkin.baseUrl: http://zipkin-server:9411
+zipkin.baseUrl: http://zipkin:9411
 
 management.endpoints.web.exposure.include= health, metrics, prometheus
 management.metrics.tags.application=${spring.application.name}
