--- a/eureka-server-prod.yml
+++ b/eureka-server-prod.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: eureka-server
+    name: eurekaserver
   boot:
     admin:
       context-path: /admin
@@ -8,7 +8,7 @@ server:
   port: 8761
 eureka:
   instance:
-    hostname: eureka-server
+    hostname: eurekaserver
   client:
     registerWithEureka: false
     fetchRegistry: false
